# duck-chat-api

./: README.md  main.py  pyproject.toml  requirements.txt  service.py  utils.py
duck_chat/: api.py
duck_chat/models/: model_type.py
