[project]
name = "duck-chat-api"
version = "0.1.0"
description = "DuckDuckGo Chat AI client"
authors = [
    {name = "paranoik1",email = "paranoik@noreplay.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec (>=0.19.0,<0.20.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)",
    "patchright (>=1.52.5,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "xvfbwrapper (>=0.2.13,<0.3.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
